# open-oscilloscope-stm32f3

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  DISCLAIMER.md  README.md  ROADMAP.md  STM32F303RETx_FLASH.cmake  STM32F303RETx_FLASH.ld  STM32F303VCTx_FLASH.ld  STM32F303xC.cmake  USAGE.md  assembly.xml  download.cfg  f3-oscill.ioc  f3_nucleo_oscilloscope.ioc  f3_nucleo_oscilloscope.txt  gen_project.py  license.txt  openocd.cfg  pom.xml  release-build.sh  run.jdebug
Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f301x8.h  stm32f302x8.h  stm32f302xc.h  stm32f302xe.h  stm32f303x8.h  stm32f303xc.h  stm32f303xe.h  stm32f318xx.h  stm32f328xx.h  stm32f334x8.h  stm32f358xx.h  stm32f373xc.h  stm32f378xx.h  stm32f398xx.h
Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/: system_stm32f3xx.c
Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/arm/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/gcc/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  startup_stm32f303xe.s  startup_stm32f318xx.s  startup_stm32f328xx.s  startup_stm32f334x8.s  startup_stm32f358xx.s  startup_stm32f373xc.s  startup_stm32f378xx.s  startup_stm32f398xx.s
Drivers/CMSIS/Device/ST/STM32F3xx/Source/Templates/iar/: startup_stm32f301x8.s  startup_stm32f302x8.s  startup_stm32f302xc.s  startup_stm32f302xe.s  startup_stm32f303x8.s  startup_stm32f303xc.s  (+8 more)
Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal.h
Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal.c  stm32f3xx_hal_adc.c  stm32f3xx_hal_adc_ex.c  stm32f3xx_hal_can.c  stm32f3xx_hal_cec.c  stm32f3xx_hal_comp.c  stm32f3xx_hal_cortex.c  stm32f3xx_hal_crc.c  stm32f3xx_hal_crc_ex.c  stm32f3xx_hal_dac.c  stm32f3xx_hal_dac_ex.c  stm32f3xx_hal_dma.c  stm32f3xx_hal_flash.c  stm32f3xx_hal_flash_ex.c  stm32f3xx_hal_gpio.c  stm32f3xx_hal_hrtim.c  stm32f3xx_hal_i2c.c  stm32f3xx_hal_i2c_ex.c  stm32f3xx_hal_i2s.c  stm32f3xx_hal_i2s_ex.c  stm32f3xx_hal_irda.c  stm32f3xx_hal_iwdg.c  stm32f3xx_hal_msp_template.c  stm32f3xx_hal_nand.c  stm32f3xx_hal_nor.c  stm32f3xx_hal_opamp.c  stm32f3xx_hal_opamp_ex.c  stm32f3xx_hal_pccard.c  stm32f3xx_hal_pcd.c  stm32f3xx_hal_pcd_ex.c  stm32f3xx_hal_ppp.c  stm32f3xx_hal_pwr.c  stm32f3xx_hal_pwr_ex.c  stm32f3xx_hal_rcc.c  stm32f3xx_hal_rcc_ex.c  stm32f3xx_hal_rtc.c  stm32f3xx_hal_rtc_ex.c  stm32f3xx_hal_sdadc.c  stm32f3xx_hal_smartcard.c  stm32f3xx_hal_smartcard_ex.c  (+11 more)
Inc/: main.h  mxconstants.h  oscill.h  oscilloscope.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usb_device.h  usbd_conf.h
MDK-ARM/: f3-oscill.uvguix.elmot  f3-oscill.uvoptx  f3-oscill.uvprojx  oscill_config.s
MDK-ARM/RTE/: RTE_Components.h
MDK-ARM/f3-oscill Configuration/: .hex  f3-oscill Configuration.hex
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
SVD_Inc/: ADC1.h  ADC1_2.h  ADC2.h  ADC3.h  ADC3_4.h  ADC4.h  CAN.h  COMP.h  CRC.h  DAC.h  DBGMCU.h  DMA1.h  DMA2.h  EXTI.h  FPU.h  Flash.h  GPIOA.h  GPIOB.h  GPIOC.h  GPIOD.h  GPIOE.h  GPIOF.h  GPIOG.h  GPIOH.h  I2C1.h  I2C2.h  I2C3.h  I2S2ext.h  I2S3ext.h  IWDG.h  NVIC.h  OPAMP.h  PWR.h  RCC.h  RTC.h  SPI1.h  SPI2.h  SPI3.h  SPI4.h  SYSCFG.h  (+19 more)
Src/: comm.c  frame.c  main.c  oscill.c  oscill_config.s  sine.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usbd_cdc_if.c  usbd_conf.c
Src/usb/: usb_device.c  usbd_conf.c  usbd_ctlreq.c  usbd_def.h  usbd_desc.c  usbd_oscill.c  usbd_oscill.h  usbd_oscill_if.c  usbd_oscill_if.h
Src/zap/: main.c  misc.c  usb_oscill.h  usbd_conf.c  usbd_conf.h  usbd_core.c  usbd_oscill.c  usbd_oscill.h
Src/zap2/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usbd_conf.c
Src/zap2/inc/: stm32f3xx_hal_conf.h  stm32f3xx_it.h  usbd_conf.h
Src/zap3/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
Src/zap3/usb/: usb_device.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_oscill.c  usbd_oscill.h
chromoscope/: README.md  background.js  hw.js  index.html  manifest.json  rdy.crx  rdy.pem  script.js  style.css  test_select.html  ui.js
client/: background.js  hw.js  index.html  main.js  manifest.json  package.json  pom.xml
client/src/main/java/xyz/elmot/gencfile/: CGenerator.java  CGeneratorTest.java
client/src/main/java/xyz/elmot/oscill/: BrowserMain.java  CommFacility.java  CommThread.java  FXMain.java  Frame.java  FrameData.java  Main.java  OscilloscopeBridge.java  ShortFlowInputStream.java  WebMain.java
client/src/main/resources/xyz/elmot/gencfile/: CMSIS-SVD_Schema_1_1.xsd  STM32F303xE.svd.xml
client/src/main/resources/xyz/elmot/oscill/: content.html  hw.js  hw_usb.js  hw_web.js  oscilloscope.css  ui.js
libusb-1.0.20/examples/source/: ezusb.c  ezusb.h  fxload.c  listdevs.c  xusb.c
libusb-win32-bin-1.2.6.0/examples/: bulk.c  compile.bat
oscill-gui/: a.txt  pom.xml
oscill-gui/src/main/java/xyz/elmot/oscill/: Main.java  MainFX.java
oscill-gui/src/main/resources/xyz/elmot/oscill/: exampleConfig.json
schematics/: OSC1.brd  OSC1.sch  oscill.lbr
startup/: startup_stm32f303xc.s  startup_stm32f303xe.s
win-drv/: F3-Oscilloscope.inf
(+10 files in other folders)
